Fix duplicate error in HashSet